--- a/eJournal/src/main/resources/templates/edituser.html
+++ b/eJournal/src/main/resources/templates/edituser.html
@@ -1,15 +1,35 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<!--    <title>Редактировать пользователя</title>-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="container mt-5">-->
-<!--    <h1 class="text-center mb-4">Редактировать пользователя</h1>-->
-<!--    <form method="post" th:action="@{/updateUser}" th:object="${user}">-->
-<!--        <input type="hidden" th:name="userId" th:value="${user.id}">-->
-<!--        <div class="mb-3">-->
-<!--            <label for="email" class="form-label-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Редактировать пользователя</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Редактировать пользователя</h1>
+    <form method="post" th:action="@{/updateUser}" th:object="${user}">
+        <input type="hidden" th:name="userId" th:value="${user.id}">
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" th:value="${user.email}" required>
+        </div>
+        <div class="mb-3">
+            <label for="login" class="form-label">Логин</label>
+            <input type="text" class="form-control" id="login" name="login" th:value="${user.login}" required>
+        </div>
+        <div class="mb-3">
+            <label for="groupNumber" class="form-label">Группа</label>
+            <input type="text" class="form-control" id="groupNumber" name="groupNumber" th:value="${user.groupNumber}"
+                   required>
+        </div>
+        <button type="submit" class="btn btn-primary">Сохранить изменения</button>
+    </form>
+</div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
+
