--- a/eJournal/src/main/resources/templates/editschedule.html
+++ b/eJournal/src/main/resources/templates/editschedule.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Редактировать расписание</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
 </head>
 <body>
 <div class="container mt-4">
-    <h1>Редактировать расписание</h1>
+    <h1>Редактировать предмет в расписании</h1>
     <form method="post" th:action="@{/editschedule/{id}(id=${schedule.id})}">
         <input type="hidden" name="id" th:value="${schedule.id}">
         <div class="mb-3">
