--- a/eJournal/src/main/resources/templates/newgroup.html
+++ b/eJournal/src/main/resources/templates/newgroup.html
@@ -5,29 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добавление новой группы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .center-form {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 50%;
-        }
-
-        .center-form {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 50%;
-        }
-
-        .submit-btn-container {
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
 </head>
 <body>
+<div th:insert="blocks/sidebar :: sidebar"></div>
 <div class="center-form">
     <h1 class="text-center mb-4">Добавление группы</h1>
     <form action="/saveStudentGroup" method="post" novalidate>
