--- a/eJournal/src/main/resources/templates/registration.html
+++ b/eJournal/src/main/resources/templates/registration.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     <title>Регистрация</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
