--- a/eJournal/src/main/resources/templates/tablegroups.html
+++ b/eJournal/src/main/resources/templates/tablegroups.html
@@ -5,37 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список групп</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
 </head>
 <body>
-<div class="container mt-5">
-    <h1 class="text-center mb-4">Список групп</h1>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th scope="col">№</th>
-            <th scope="col">Номер группы</th>
-            <th scope="col">Студентов в группе</th>
-            <th scope="col">Действия</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="group,iterStat : ${groups}">
-            <th scope="row" th:text="${iterStat.index + 1}"></th>
-            <td th:text="${group.groupNumber}"></td>
-            <td th:text="${membersCount[group.groupNumber]}"></td>
-            <td>
-                <form th:action="@{'/editGroup/' + ${group.id}}" method="post" class="d-inline">
-                    <input type="text" name="groupNumber" th:value="${group.groupNumber}" class="form-control d-inline"
-                           style="width: 100px;">
-                    <button type="submit" class="btn btn-primary">Edit</button>
-                </form>
-                <form th:action="@{'/deleteGroup/' + ${group.id}}" method="post" class="d-inline">
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<div th:insert="blocks/sidebar :: sidebar"></div>
+<div class="main">
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Список групп</h1>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">№</th>
+                <th scope="col">Номер группы</th>
+                <th scope="col">Студентов в группе</th>
+                <th scope="col">Действия</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="group,iterStat : ${groups}">
+                <th scope="row" th:text="${iterStat.index + 1}"></th>
+                <td th:text="${group.groupNumber}"></td>
+                <td th:text="${membersCount[group.groupNumber]}"></td>
+                <td>
+                    <form th:action="@{'/editGroup/' + ${group.id}}" method="post" class="d-inline">
+                        <input type="text" name="groupNumber" th:value="${group.groupNumber}"
+                               class="form-control d-inline"
+                               style="width: 100px;">
+                        <button type="submit" class="btn btn-primary">Edit</button>
+                    </form>
+                    <form th:action="@{'/deleteGroup/' + ${group.id}}" method="post" class="d-inline">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
