--- a/eJournal/src/main/resources/templates/tableschedule.html
+++ b/eJournal/src/main/resources/templates/tableschedule.html
@@ -11,8 +11,8 @@
 <div th:insert="blocks/sidebar :: sidebar"></div>
 <div class="main">
     <div class="container mt-4">
-        <h1>Расписание</h1>
-        <a href="/schedule/addschedule" class="btn btn-primary mb-2">Добавить предмет в расписание</a>
+        <h1 class="text-center mb-4">Расписание</h1>
+        <a href="/schedule/newschedule" class="btn btn-primary mb-2">Добавить предмет в расписание</a>
         <table class="table">
             <thead>
             <tr>
