--- a/eJournal/src/main/resources/templates/tablestudents.html
+++ b/eJournal/src/main/resources/templates/tablestudents.html
@@ -12,6 +12,7 @@
 <div class="main">
     <div class="container mt-5">
         <h1 class="text-center mb-4">Студенты</h1>
+        <a href="/newuser" class="btn btn-primary mb-2">Добавить нового студента</a>
         <div class="mb-3">
             <label for="group" class="form-label">Выберите группу</label>
             <select class="form-select" id="group" name="group" onchange="location = this.value;">
