--- a/eJournal/src/main/resources/templates/newuser.html
+++ b/eJournal/src/main/resources/templates/newuser.html
@@ -33,6 +33,7 @@
             <label for="role" class="form-label">Роль</label>
             <select class="form-select" id="role" name="role" required>
                 <option value="USER">User</option>
+                <option value="SUPERUSER">Super User</option>
                 <option value="ADMIN">Admin</option>
             </select>
         </div>
