--- a/eJournal/src/main/resources/templates/authorisation.html
+++ b/eJournal/src/main/resources/templates/authorisation.html
@@ -6,11 +6,13 @@
     <title>Авторизация</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/css/yaklass.css}"/>
+
 </head>
 <body>
 <div class="center-form">
     <h1 class="text-center mb-4">Авторизация</h1>
-    <form action="/authorisation" method="post">
+    <form action="/login" method="post">
         <div class="mb-3">
             <label for="email" class="form-label">Электронная почта</label>
             <input type="email" class="form-control" id="email" name="email" required>
