--- a/eJournal/src/main/resources/templates/editschedule.html
+++ b/eJournal/src/main/resources/templates/editschedule.html
@@ -6,6 +6,7 @@
     <title>Редактировать расписание</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/css/yaklass.css}"/>
 </head>
 <body>
 <div class="container mt-4">
