--- a/eJournal/src/main/resources/templates/newuser.html
+++ b/eJournal/src/main/resources/templates/newuser.html
@@ -6,6 +6,7 @@
     <title>Создание нового пользователя</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/css/yaklass.css}"/>
 </head>
 <body>
 <div th:insert="blocks/sidebar :: sidebar"></div>
@@ -32,9 +33,10 @@
         <div class="mb-3">
             <label for="role" class="form-label">Роль</label>
             <select class="form-select" id="role" name="role" required>
-                <option value="USER">User</option>
-                <option value="SUPERUSER">Super User</option>
-                <option value="ADMIN">Admin</option>
+                <option value="STUDENT">Студент</option>
+                <option value="PREFECT">Староста</option>
+                <option value="TEACHER">Преподаватель</option>
+                <option value="DEAN">Деканат</option>
             </select>
         </div>
         <div class="d-flex justify-content-center">
