Add student functional

--- a/eJournal/src/main/resources/templates/blocks/sidebar.html
+++ b/eJournal/src/main/resources/templates/blocks/sidebar.html
@@ -5,6 +5,6 @@
         <a href="/tablegroups">Группы</a>
         <a href="/tablestudents">Пользователи</a>
         <a href="/tableabsenteeism">Прогулы</a>
-        <a href="/authorisation">Выйти</a>
+        <a href="/">Выйти</a>
     </div>
 </div>
