--- a/eJournal/src/main/resources/templates/newuser.html
+++ b/eJournal/src/main/resources/templates/newuser.html
@@ -12,7 +12,7 @@
 <div th:insert="blocks/sidebar :: sidebar"></div>
 <div class="center-form">
     <h1 class="text-center mb-4">Создание нового пользователя</h1>
-    <form action="/saveUser" method="post">
+    <form th:action="@{/saveUser}" method="post">
         <div class="mb-3">
             <label for="email" class="form-label">Электронная почта</label>
             <input type="email" class="form-control" id="email" name="email" required>
@@ -34,10 +34,21 @@
             <label for="role" class="form-label">Роль</label>
             <select class="form-select" id="role" name="role" required>
                 <option value="STUDENT">Студент</option>
-                <option value="PREFECT">Староста</option>
                 <option value="TEACHER">Преподаватель</option>
                 <option value="DEAN">Деканат</option>
             </select>
+        </div>
+        <div class="mb-3">
+            <label for="name" class="form-label">Имя</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="mb-3">
+            <label for="surname" class="form-label">Фамилия</label>
+            <input type="text" class="form-control" id="surname" name="surname" required>
+        </div>
+        <div class="mb-3">
+            <label for="subject" class="form-label">Предмет</label>
+            <input type="text" class="form-control" id="subject" name="subject">
         </div>
         <div class="d-flex justify-content-center">
             <button type="submit" class="btn btn-primary">Добавить</button>
