--- a/eJournal/src/main/resources/templates/blocks/sidebar-teacher.html
+++ b/eJournal/src/main/resources/templates/blocks/sidebar-teacher.html
@@ -1,7 +1,7 @@
 <div th:fragment="sidebar">
   <div class="sidebar">
     <h1><b>eJournal</b></h1>
-    <a href="/prefect-schedule">Расписание</a>
+    <a href="/teacher-schedule">Расписание</a>
     <a href="/setmark">Отметки</a>
     <a href="/setabsenteeism">Прогулы</a>
     <a href="/">Выйти</a>
