--- a/eJournal/src/main/resources/templates/setmark.html
+++ b/eJournal/src/main/resources/templates/setmark.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Выставить оценку</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/css/yaklass.css}"/>
 </head>
 <body>
-
+<div class="sidebar">
+    <h1><b>eJournal</b></h1>
+    <a th:href="@{/teacher-schedule(userId=${userId})}">Расписание</a>
+    <a th:href="@{/setmark(userId=${userId})}">Выставить оценку</a>
+    <a th:href="@{/setabsenteeism(userId=${userId})}">Записать прогул</a>
+    <a href="/">Выйти</a>
+</div>
 </body>
 </html>
