--- a/eJournal/src/main/resources/templates/teacher-schedule.html
+++ b/eJournal/src/main/resources/templates/teacher-schedule.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Записать прогул</title>
+    <title>Расписание преподавателя</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     <link rel="stylesheet" th:href="@{/css/yaklass.css}"/>
