while(true){ fixBags(); makeNewBags(); }
Add statistics to Dean
Update sidebar
Update Teacher functional
Add model Statistics

--- a/eJournal/src/main/resources/templates/blocks/sidebar.html
+++ b/eJournal/src/main/resources/templates/blocks/sidebar.html
@@ -5,6 +5,7 @@
         <a href="/tablegroups">Группы</a>
         <a href="/tablestudents">Пользователи</a>
         <a href="/tableabsenteeism">Прогулы</a>
+        <a href="/statistics">Статистика</a>
         <a href="/">Выйти</a>
     </div>
 </div>
