--- a/eJournal/src/main/resources/templates/tablestudents.html
+++ b/eJournal/src/main/resources/templates/tablestudents.html
@@ -13,7 +13,7 @@
 <div class="main">
     <div class="container">
         <h1 class="my-3">Список студентов</h1>
-
+        <a href="/newuser" class="btn btn-primary mb-2">Добавить нового пользователя</a>
         <form method="get" action="/tablestudents">
             <div class="form-group">
                 <label for="groupNumber">Выберите группу:</label>
@@ -63,9 +63,5 @@
         </table>
     </div>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
