--- a/eJournal/src/main/resources/templates/newgroup.html
+++ b/eJournal/src/main/resources/templates/newgroup.html
@@ -6,25 +6,26 @@
     <title>Добавление новой группы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
-    <link rel="stylesheet" th:href="@{/css/yaklass.css}"/>
 </head>
 <body>
 <div th:insert="blocks/sidebar :: sidebar"></div>
-<div class="center-form">
-    <h1 class="text-center mb-4">Добавление группы</h1>
-    <form action="/saveStudentGroup" method="post" novalidate>
-        <div class="mb-3">
-            <label for="groupNumber" class="form-label">Номер группы</label>
-            <input type="number" class="form-control" id="groupNumber" name="groupNumber" required>
+<div class="container">
+    <div class="center-form">
+        <h1 class="text-center mb-4">Добавление группы</h1>
+        <form action="/saveStudentGroup" method="post" novalidate>
+            <div class="mb-3">
+                <label for="groupNumber" class="form-label">Номер группы</label>
+                <input type="number" class="form-control" id="groupNumber" name="groupNumber" required>
+            </div>
+            <div class="submit-btn-container">
+                <button type="submit" class="btn btn-primary">Добавить</button>
+            </div>
+        </form>
+        <div class="mt-3" id="message">
+            <p th:text="${message}"></p>
         </div>
-        <div class="submit-btn-container">
-            <button type="submit" class="btn btn-primary">Добавить</button>
-        </div>
-    </form>
-    <div class="mt-3" id="message">
-        <p th:text="${message}"></p>
+        <div class="alert alert-danger mt-3" th:if="${error}" th:text="${error}"></div>
     </div>
-    <div class="alert alert-danger mt-3" th:if="${error}" th:text="${error}"></div>
 </div>
 </body>
 </html>
