--- a/eJournal/src/main/resources/templates/authorisation.html
+++ b/eJournal/src/main/resources/templates/authorisation.html
@@ -6,22 +6,27 @@
     <title>Авторизация</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
-
 </head>
 <body>
 <div class="center-form">
     <h1 class="text-center mb-4">Авторизация</h1>
     <form action="/login" method="post">
         <div class="mb-3">
-            <label for="email" class="form-label">Электронная почта</label>
-            <input type="email" class="form-control" id="email" name="email" required>
+            <label for="identifier" class="form-label">Электронная почта или логин</label>
+            <input type="text" class="form-control" id="identifier" name="identifier" required>
         </div>
+
         <div class="mb-3">
             <label for="password" class="form-label">Пароль</label>
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
+        <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
         <button type="submit" class="btn btn-primary">Войти</button>
     </form>
+</div>
+
+<div class="footer">
+    <p>Copyright &copy; 2023 Company Name. All rights reserved.</p>
 </div>
 </body>
 </html>
