--- a/eJournal/src/main/resources/templates/tablestatistics.html
+++ b/eJournal/src/main/resources/templates/tablestatistics.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <title>Статистика студента</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
-    <title>Статистика</title></head>
+    <link rel="stylesheet" th:href="@{/css/yaklass.css}"/>
+</head>
 <body>
 <div th:insert="blocks/sidebar :: sidebar"></div>
 <div class="main">
     <div class="container mt-4">
-        <h1 class="text-center mb-4">Статистика групп</h1>
+        <h1 class="text-center mb-4">Статистика студента</h1>
         <table class="table">
             <thead>
             <tr>
-                <th>Номер группы</th>
                 <th>Предмет</th>
                 <th>Средняя оценка</th>
                 <th>Прогулы</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="groupStats : ${groupStatistics}">
-                <td th:text="${groupStats.groupNumber}"></td>
-                <td th:text="${groupStats.subject}"></td>
-                <td th:text="${groupStats.averageMark}"></td>
-                <td th:text="${groupStats.absenteeisms}"></td>
+            <tr th:each="statistics : ${statistics}">
+                <td th:text="${statistics.subject}"></td>
+                <td th:text="${statistics.averageMark}"></td>
+                <td th:text="${statistics.absenteeisms}"></td>
             </tr>
             </tbody>
         </table>
